# uri-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/uri/: __init__.py  completions.py  generate.py  handle.py  registry.py  scheme.py
tests/: test_registry.py
